# makhzouni

./: .gitignore  .railwayignore  .vercelignore  CLAUDE.md  DEPLOYMENT.md  PROJECT_FULL_BRIEF.md  RUN_GUIDE_AR.md  docker-compose.yml  start-app.bat
.claude/: launch.json  settings.local.json
.codex/: project-map.md
.vercel/: project.json
inventory-android/: build-err.txt  build-out.txt  gradle.properties  local.properties  settings.gradle.kts
inventory-android/app/: build.gradle.kts
inventory-android/gradle/: libs.versions.toml
inventory-backend/: .env.example  Dockerfile  migrate-transfers.ts  package-lock.json  package.json  railway.json  tsconfig.json
inventory-backend/prisma/: schema.prisma  seed.ts
inventory-backend/scripts/: prod-reset.ts
inventory-backend/src/: server.ts
inventory-desktop-trial/: .gitignore  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
inventory-desktop-trial/src-tauri/: Cargo.toml  tauri.conf.json
inventory-desktop-trial/src-tauri/capabilities/: default.json
inventory-desktop-trial/src-tauri/src/: lib.rs  main.rs
inventory-web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vercel.json  vite.config.ts
postman/: inventory-api.postman_collection.json
saas-admin-api/: .env.example  SETUP.md  package-lock.json  package.json  railway.json
saas-admin-web/: index.html  package-lock.json  package.json
scripts/: backup-download.ps1  generate-admin-translations.mjs  generate-license.js  sync-desktop.sh
toy-website/: package-lock.json  package.json
(+637 files in other folders)
